2008-11-10  higepon  <higepon@users.sourceforge.jp>

        * Added : bitwise-arithmetic-shift-left.

        * Added : bitwise-not, bitwise-and, bitwise-ior, bitwise-xor, bitwise-bit-count
                  bitwise-length, bitwise-first-bit-set and bitwise-if.

        * lib/core/flonum.scm, lib/core/bitwise.scm: Added.

        * lib/core: Added. We place base library here.

        * BitwiseProcedures.cpp/.h: Added.

2008-11-09  higepon  <higepon@users.sourceforge.jp>

        * Implemented All of procedures defined in R6RS lib 11.3  Flonums.

        * Added : fldiv, flmod, fldiv-and-mod, fldiv0, flmod0, fldiv0-and-mod0
                  flnumerator, fldenominator, flfloor, flceiling, fltruncate, flround
                  flexp, fllog, flsin, flcos, fltan, flasin, flacos, flatan, flsqrt
                  flexpt and fixnum->flonum.

2008-11-08  higepon  <higepon@users.sourceforge.jp>

        * Added : flabs.

        * scripts/gen-cproc.scm (proc-name->c-proc-name): Added special case for fl/ and fl-.

        * Added fl=?, fl>?, fl>=?, fl<?, fl<=?, real->flonum, flodd?, fleven?
                flfinite?, flinfinite?, flnan?, flmax, flmin, fl+, fl-, fl*, fl/.

        * test-data.scm : Added definition syntax. You can pre-define something necessary for test.

        * Added : denominator and numerator.

2008-11-07  higepon  <higepon@users.sourceforge.jp>

        * Added : nan?, finite? and infinite?

        * Flonum.h : Added isNan.

        * Added positive? and negative?

        * Added exact.

        * Added exact? and inexact?

        * VM.cpp : Check max-stack on LET_FRAME. If stack overflows, expand it.

        * compiler.scm: Added max-stack operand to LET_FRAME.

2008-11-05  higepon  <higepon@users.sourceforge.jp>

        * Implemented : Complex number normalization.

        * Implemented  +, -, *, /, >, >=, <, <=, = between Compnum and (Rational, Fixnum ,Flonum, Bignum and Compnum).

        * vm.cpp (setAfterTrigger1): Fixed stack bug.
