@@ -45,6 +45,7 @@ namespace scheme {
     Object bitwiseFirstBitSetEx(int argc, const Object* argv);
     Object bitwiseArithmeticShiftLeftEx(int argc, const Object* argv);
     Object bitwiseArithmeticShiftRightEx(int argc, const Object* argv);
+    Object bitwiseArithmeticShiftEx(int argc, const Object* argv);
 }; // namespace scheme
 
 #endif // __SCHEME_BITWISE_PROCEDURES__
