@@ -2056,6 +2056,40 @@
 (32 (bitwise-arithmetic-shift-left 1 5))
 (#t (fixnum? (bitwise-arithmetic-shift-left 1 5)))
 (#t (= (bitwise-arithmetic-shift-left (* 256 256 256 256) 1) (* 256 256 256 256 2)))
+(1 (bitwise-arithmetic-shift-right 32 5))
+(#t (= (bitwise-arithmetic-shift-right (* 256 256 256 256 2) 1) (* 256 256 256 256)))
+(-3 (bitwise-arithmetic-shift -6 -1))
+(-3 (bitwise-arithmetic-shift -5 -1))
+(-2 (bitwise-arithmetic-shift -4 -1))
+(-2 (bitwise-arithmetic-shift -3 -1))
+(-1 (bitwise-arithmetic-shift -2 -1))
+(-1 (bitwise-arithmetic-shift -1 -1))
+(88 (bitwise-reverse-bit-field 82 1 4))
+(#t (bitwise-bit-set? -1 300))
+(#t (bitwise-bit-set? -1 0))
+(#f (bitwise-bit-set? -2 0))
+
+;; Numerical type predicates
+(#t (complex? (make-complex 3 4)))
+(#t (complex? 3))
+(#t (real? 3))
+(#f (real? (make-complex t3.1 t0.0)))
+(#t (real? (make-complex t3.1 0)))
+(#t (real? (t-3.1)))
+(#t (rational? (/ 6 10)))
+(#t (rational? (/ 6 3)))
+(#t (rational? 2))
+(#t (integer? (make-complex 3 0)))
+(#t (integer? t3.0))
+(#t (integer? (/ 8 4)))
+(#t (number? my-nan))
+(#t (complex? my-nan))
+(#t (real? my-nan))
+(#f (rational? my-nan))
+(#t (complex? plus-inf))
+(#t (real? minus-inf))
+(#f (rational? minus-inf))
+(#f (integer? minus-inf))
 
 
 
